# rflcs

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  runme.sh
RFLCS_instances/: instance_generation.py
RFLCS_instances/evocop2016/: 128_3reps.0  128_3reps.1  128_3reps.2  128_3reps.3  128_3reps.4  128_3reps.5  128_3reps.6  128_3reps.7  128_3reps.8  128_3reps.9  128_4reps.0  128_4reps.1  128_4reps.2  128_4reps.3  128_4reps.4  128_4reps.5  128_4reps.6  128_4reps.7  128_4reps.8  128_4reps.9  128_5reps.0  128_5reps.1  128_5reps.2  128_5reps.3  128_5reps.4  128_5reps.5  128_5reps.6  128_5reps.7  128_5reps.8  128_5reps.9  128_6reps.0  128_6reps.1  128_6reps.2  128_6reps.3  128_6reps.4  128_6reps.5  128_6reps.6  128_6reps.7  128_6reps.8  128_6reps.9  (+439 more)
RFLCS_instances/generated_instances/: 640_80.0  640_80.1  640_80.10  640_80.11  640_80.12  640_80.13  640_80.14  640_80.15  640_80.16  640_80.17  640_80.18  640_80.19  640_80.2  640_80.20  640_80.21  640_80.22  640_80.23  640_80.24  640_80.25  640_80.26  640_80.27  640_80.28  640_80.29  640_80.3  640_80.4  640_80.5  640_80.6  640_80.7  640_80.8  640_80.9  768_96.0  768_96.1  768_96.10  768_96.11  768_96.12  768_96.13  768_96.14  768_96.15  768_96.16  768_96.17  (+20 more)
RFLCS_instances/type0/: 1024_3n-div-4.0  1024_3n-div-4.1  1024_3n-div-4.10  1024_3n-div-4.11  1024_3n-div-4.12  1024_3n-div-4.13  1024_3n-div-4.14  1024_3n-div-4.15  1024_3n-div-4.16  1024_3n-div-4.17  1024_3n-div-4.18  1024_3n-div-4.19  1024_3n-div-4.2  1024_3n-div-4.20  1024_3n-div-4.21  1024_3n-div-4.22  1024_3n-div-4.23  1024_3n-div-4.24  1024_3n-div-4.25  1024_3n-div-4.26  1024_3n-div-4.27  1024_3n-div-4.28  1024_3n-div-4.29  1024_3n-div-4.3  1024_3n-div-4.4  1024_3n-div-4.5  1024_3n-div-4.6  1024_3n-div-4.7  1024_3n-div-4.8  1024_3n-div-4.9  1024_3n-div-8.0  1024_3n-div-8.1  1024_3n-div-8.10  1024_3n-div-8.11  1024_3n-div-8.12  1024_3n-div-8.13  1024_3n-div-8.14  1024_3n-div-8.15  1024_3n-div-8.16  1024_3n-div-8.17  (+1640 more)
RFLCS_instances/type1/: 128_3reps.0  128_3reps.1  128_3reps.10  128_3reps.11  128_3reps.12  128_3reps.13  128_3reps.14  128_3reps.15  128_3reps.16  128_3reps.17  128_3reps.18  128_3reps.19  128_3reps.2  128_3reps.20  128_3reps.21  128_3reps.22  128_3reps.23  128_3reps.24  128_3reps.25  128_3reps.26  128_3reps.27  128_3reps.28  128_3reps.29  128_3reps.3  128_3reps.4  128_3reps.5  128_3reps.6  128_3reps.7  128_3reps.8  128_3reps.9  128_4reps.0  128_4reps.1  128_4reps.10  128_4reps.11  128_4reps.12  128_4reps.13  128_4reps.14  128_4reps.15  128_4reps.16  128_4reps.17  (+1400 more)
experiments/: aggregate.py  box_plots.py  formatting.py  latex_table.py  time_series_edge_count.txt  time_series_node_count.txt  time_series_plots.py
experiments/evocop2016/: 128_3reps.0.out  128_3reps.1.out  128_3reps.2.out  128_3reps.3.out  128_3reps.4.out  128_3reps.5.out  128_3reps.6.out  128_3reps.7.out  128_3reps.8.out  128_3reps.9.out  128_4reps.0.out  128_4reps.1.out  128_4reps.2.out  128_4reps.3.out  128_4reps.4.out  128_4reps.5.out  128_4reps.6.out  128_4reps.7.out  128_4reps.8.out  128_4reps.9.out  128_5reps.0.out  128_5reps.1.out  128_5reps.2.out  128_5reps.3.out  128_5reps.4.out  128_5reps.5.out  128_5reps.6.out  128_5reps.7.out  128_5reps.8.out  128_5reps.9.out  128_6reps.0.out  128_6reps.1.out  128_6reps.2.out  128_6reps.3.out  128_6reps.4.out  128_6reps.5.out  128_6reps.6.out  128_6reps.7.out  128_6reps.8.out  128_6reps.9.out  (+440 more)
experiments/generated_instances/: 640_80.0.out  640_80.1.out  640_80.10.out  640_80.11.out  640_80.12.out  640_80.13.out  640_80.14.out  640_80.15.out  640_80.16.out  640_80.17.out  640_80.18.out  640_80.19.out  640_80.2.out  640_80.20.out  640_80.21.out  640_80.22.out  640_80.23.out  640_80.24.out  640_80.25.out  640_80.26.out  640_80.27.out  640_80.28.out  640_80.29.out  640_80.3.out  640_80.4.out  640_80.5.out  640_80.6.out  640_80.7.out  640_80.8.out  640_80.9.out  768_96.0.out  768_96.1.out  768_96.10.out  768_96.11.out  768_96.12.out  768_96.13.out  768_96.14.out  768_96.15.out  768_96.16.out  768_96.17.out  (+20 more)
experiments/type0/: 1024_3n-div-4.0.out  1024_3n-div-4.1.out  1024_3n-div-4.10.out  1024_3n-div-4.11.out  1024_3n-div-4.12.out  1024_3n-div-4.13.out  1024_3n-div-4.14.out  1024_3n-div-4.15.out  1024_3n-div-4.16.out  1024_3n-div-4.17.out  1024_3n-div-4.18.out  1024_3n-div-4.19.out  1024_3n-div-4.2.out  1024_3n-div-4.20.out  1024_3n-div-4.21.out  1024_3n-div-4.22.out  1024_3n-div-4.23.out  1024_3n-div-4.24.out  1024_3n-div-4.25.out  1024_3n-div-4.26.out  1024_3n-div-4.27.out  1024_3n-div-4.28.out  1024_3n-div-4.29.out  1024_3n-div-4.3.out  1024_3n-div-4.4.out  1024_3n-div-4.5.out  1024_3n-div-4.6.out  1024_3n-div-4.7.out  1024_3n-div-4.8.out  1024_3n-div-4.9.out  1024_3n-div-8.0.out  1024_3n-div-8.1.out  1024_3n-div-8.10.out  1024_3n-div-8.11.out  1024_3n-div-8.12.out  1024_3n-div-8.13.out  1024_3n-div-8.14.out  1024_3n-div-8.15.out  1024_3n-div-8.16.out  1024_3n-div-8.17.out  (+1640 more)
experiments/type1/: 128_3reps.0.out  128_3reps.1.out  128_3reps.10.out  128_3reps.11.out  128_3reps.12.out  128_3reps.13.out  128_3reps.14.out  128_3reps.15.out  128_3reps.16.out  128_3reps.17.out  128_3reps.18.out  128_3reps.19.out  128_3reps.2.out  128_3reps.20.out  128_3reps.21.out  128_3reps.22.out  128_3reps.23.out  128_3reps.24.out  128_3reps.25.out  128_3reps.26.out  128_3reps.27.out  128_3reps.28.out  128_3reps.29.out  128_3reps.3.out  128_3reps.4.out  128_3reps.5.out  128_3reps.6.out  128_3reps.7.out  128_3reps.8.out  128_3reps.9.out  (+1410 more)
experiments_no_mdd/: aggregate.py  box_plots.py  latex_table.py
results/: aggregate.py  box_plots.py  latex_table.py  main.tex  type0_horn  type1_horn
src/: character.hpp  character_set.hpp  config.hpp  constants.cpp  constants.hpp  formatting_utils.cpp  formatting_utils.h  globals.cpp  globals.hpp  heuristic.cpp  heuristic.hpp  input_processing.cpp  input_processing.hpp  instance.hpp  main.cpp  mdd_graph_pruning.cpp  mdd_graph_pruning.hpp  reduction_orchestration.cpp  reduction_orchestration.hpp  result_writer.cpp  result_writer.h  result_writer.hpp  temporaries.cpp  temporaries.hpp  types.hpp  utils.cpp  utils.h
(+2928 files in other folders)
